extract github config from code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-
 server.port=8080
+github.client.id=Ov23liZcPZaAN0A5IdG1
+github.client.secret=f673a9404c9b4079c889a9bde92abd0a0e662aa0
+github.redirect.uri=http://localhost:8080/callback
 
 
 
