--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ server.port=8080
 github.client.id=Ov23liZcPZaAN0A5IdG1
 github.client.secret=f673a9404c9b4079c889a9bde92abd0a0e662aa0
 github.redirect.uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:mysql://localhost:3306/community?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 
